# serializer version: 1
# name: test_set_value_same
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'F1155 Room sensor setpoint S1',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 5.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '°C',
    }),
    'context': <ANY>,
    'entity_id': 'number.room_sensor_setpoint_s1_47398',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '25.0',
  })
# ---
# name: test_update[Model.F1155-47011-number.heat_offset_s1_47011--10]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'F1155 Heat Offset S1',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.heat_offset_s1_47011',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-10.0',
  })
# ---
# name: test_update[Model.F1155-47011-number.heat_offset_s1_47011-10]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'F1155 Heat Offset S1',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.heat_offset_s1_47011',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.0',
  })
# ---
# name: test_update[Model.F1155-47062-number.heat_offset_s1_47011-None]
  None
# ---
# name: test_update[Model.F750-47062-number.hw_charge_offset_47062--10]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'F750 HW charge offset',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 12.7,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -12.8,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '°C',
    }),
    'context': <ANY>,
    'entity_id': 'number.hw_charge_offset_47062',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-10.0',
  })
# ---
# name: test_update[Model.F750-47062-number.hw_charge_offset_47062-10]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'F750 HW charge offset',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 12.7,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -12.8,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '°C',
    }),
    'context': <ANY>,
    'entity_id': 'number.hw_charge_offset_47062',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.0',
  })
# ---
# name: test_update[Model.F750-47062-number.hw_charge_offset_47062-None]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'F750 HW charge offset',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 12.7,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -12.8,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '°C',
    }),
    'context': <ANY>,
    'entity_id': 'number.hw_charge_offset_47062',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_update[Model.S320-40031-number.heating_offset_climate_system_1_40031--10]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'S320 Heating offset climate system 1',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.heating_offset_climate_system_1_40031',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-10.0',
  })
# ---
# name: test_update[Model.S320-40031-number.heating_offset_climate_system_1_40031-10]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'S320 Heating offset climate system 1',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.heating_offset_climate_system_1_40031',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.0',
  })
# ---
# name: test_update[Model.S320-40031-number.heating_offset_climate_system_1_40031-None]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'S320 Heating offset climate system 1',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.heating_offset_climate_system_1_40031',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
